@@ -18,9 +18,9 @@ import org.jeecg.modules.job.integral.mapper.IntegralGoodsOrderMapper;
 import org.jeecg.modules.job.integral.mapper.IntegralLogMapper;
 import org.jeecg.modules.job.integral.service.IIntegralGoodsEffectService;
 import org.jeecg.modules.job.integral.service.IIntegralGoodsOrderService;
-import org.jeecg.modules.job.ums.entity.UmsAccount;
+import org.jeecg.modules.job.job.entity.JobPost;
+import org.jeecg.modules.job.job.service.IJobPostService;
 import org.jeecg.modules.job.ums.service.IUmsAccountService;
-import org.jeecg.modules.job.ums.service.IUmsParamLimitService;
 import org.springframework.stereotype.Service;
 
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
@@ -47,106 +47,105 @@ public class IntegralGoodsOrderServiceImpl extends ServiceImpl<IntegralGoodsOrde
     @Resource
     private IntegralLogMapper integralLogMapper;
     @Resource
-    private IUmsParamLimitService paramLimitService;
-    @Resource
     private IIntegralGoodsEffectService goodsEffectService;
     @Resource
     private IUmsAccountService accountService;
-
+    @Resource
+    private IJobPostService postService;
 
     @Transactional
     @Override
     public boolean createJfOrder(String userId, String number, String goodsId, String amount, String dataId) {
-        //判断金额是否匹配
-        IntegralGoods goods=jfGoodsMapper.selectById(goodsId);
-        if (goods==null){
+        IntegralGoods goods = jfGoodsMapper.selectById(goodsId);
+        if (goods == null) {
             throw new RuntimeException("参数异常");
         }
-        BigDecimal total=goods.getIntegral().multiply(new BigDecimal(number));
-        if (total.compareTo(new BigDecimal(amount))!=0){
+        // AI 卡已下线
+        if (BizConstants.JF_CODE_AI.equals(goods.getCode()) || "ai".equals(goods.getCode())) {
+            throw new RuntimeException("该道具已下线");
+        }
+        BigDecimal total = goods.getIntegral().multiply(new BigDecimal(number));
+        if (total.compareTo(new BigDecimal(amount)) != 0) {
             throw new RuntimeException("支付金额异常，请重新提交");
         }
         LoginUser user = sysBaseAPI.getUserById(userId);
-        //判断积分是否足够
-        if (user.getIntegral() < new BigDecimal(amount).intValue()){
+        if (user.getIntegral() < new BigDecimal(amount).intValue()) {
             throw new RuntimeException("积分不足");
         }
-        //生成订单
-        IntegralGoodsOrder order=new IntegralGoodsOrder();
-        //生成订单编号
-        String no= DateUtils.formatDate(new Date(),"yyyyMMddHHmmss")+ RandomUtil.randomNumbers(5);
+        IntegralGoodsOrder order = new IntegralGoodsOrder();
+        String no = DateUtils.formatDate(new Date(), "yyyyMMddHHmmss") + RandomUtil.randomNumbers(5);
         order.setOrderSn(no);
         order.setAmount(new BigDecimal(amount));
         order.setPrice(goods.getIntegral());
-        order.setNumber(new Integer(number));
+        order.setNumber(Integer.valueOf(number));
         order.setGoodsId(goodsId);
         order.setPayType(BizConstants.PAY_TYPE_JF);
         order.setUserId(user.getId());
         order.setOrderStatus(BizConstants.ORDER_STATUS_SUCCESS.toString());
         this.save(order);
-        //扣除积分
-        user.setIntegral(user.getIntegral()-order.getAmount().intValue());
+
+        user.setIntegral(user.getIntegral() - order.getAmount().intValue());
         sysBaseAPI.updateUserInfo(user);
-        //积分记录
-        IntegralLog log=new IntegralLog();
+
+        IntegralLog log = new IntegralLog();
         log.setUserId(user.getId());
         log.setIfAdd(0);
         log.setIntegralResource(BizConstants.INTEGRAL_RESOURCE_PLANER);
         log.setDataId(order.getId());
         log.setIntegral(order.getAmount());
-        log.setRemark("购买积分道具-"+goods.getName()+"消费积分："+order.getAmount().toString());
+        log.setRemark("购买积分道具-" + goods.getName() + "消费积分：" + order.getAmount().toString());
         integralLogMapper.insert(log);
 
-        //积分道具生效
-        if (goods.getCode().equals(BizConstants.JF_CODE_AI)){
-            //AI卡
-            paramLimitService.addAi(userId,10);//10次卡
-        }else if (goods.getCode().equals(BizConstants.JF_CODE_REFRESH)){//刷新卡
-            //刷新提交时间
-            if (oConvertUtils.isEmpty(dataId)){
-                throw new RuntimeException("参数错误");
-            }
-            //刷新时间
-//            UmsApply apply=applyService.getById(dataId);
-//            if (apply!=null){
-//                apply.setRefreshTime(new Date());
-//                applyService.updateById(apply);
-//            }else{
-//                throw new RuntimeException("参数错误");
-//            }
-        }else if (goods.getCode().equals(BizConstants.JF_CODE_TOPPING) || goods.getCode().equals(BizConstants.JF_CODE_EYE)){//置顶卡/加粗
-            if (oConvertUtils.isEmpty(dataId)){//岗位ID不能为空
-                throw new RuntimeException("参数错误");
-            }
-            //
-            IntegralGoodsEffect effect=new IntegralGoodsEffect();
-            effect.setDataId(dataId);
-            effect.setGoodsCode(goods.getCode());
-            effect.setGoodsId(goods.getId());
-            effect.setStatus(1);//启用
-            effect.setStartTime(new Date());
-            effect.setEndTime(DateUtil.offsetHour(effect.getStartTime(),goods.getPeriod()));
-            effect.setUserId(userId);
-            effect.setPeriod(goods.getPeriod());
-            goodsEffectService.addOrUpdateEffect(effect);
-            if (goods.getCode().equals(BizConstants.JF_CODE_TOPPING)){//置顶
-                //岗位置顶
-//                RmsCompanyPosition position=new RmsCompanyPosition().setId(dataId).setIfTopping(1);
-//                positionService.updateById(position);
-            }else if (goods.getCode().equals(BizConstants.JF_CODE_EYE)){//加粗
-                //岗位加粗
-//                RmsCompanyPosition position=new RmsCompanyPosition().setId(dataId).setIfBold(1);
-//                positionService.updateById(position);
-            }
-        }else if (goods.getCode().equals(BizConstants.JF_CODE_PERSPECTIVE)){//透视卡
-
-        }
+        applyGoodsEffect(userId, goods, dataId);
         return true;
     }
 
+    /**
+     * 道具生效：刷新/置顶/加粗写回 JobPost
+     */
+    private void applyGoodsEffect(String userId, IntegralGoods goods, String dataId) {
+        String code = goods.getCode();
+        if (BizConstants.JF_CODE_REFRESH.equals(code)) {
+            JobPost post = requireOwnPost(userId, dataId);
+            postService.updateById(new JobPost().setId(post.getId()).setCreateTime(new Date()));
+            return;
+        }
+        if (BizConstants.JF_CODE_TOPPING.equals(code) || BizConstants.JF_CODE_EYE.equals(code)) {
+            JobPost post = requireOwnPost(userId, dataId);
+            IntegralGoodsEffect effect = new IntegralGoodsEffect();
+            effect.setDataId(post.getId());
+            effect.setGoodsCode(code);
+            effect.setGoodsId(goods.getId());
+            effect.setStatus(1);
+            effect.setStartTime(new Date());
+            effect.setEndTime(DateUtil.offsetHour(effect.getStartTime(), goods.getPeriod()));
+            effect.setUserId(userId);
+            effect.setPeriod(goods.getPeriod());
+            goodsEffectService.addOrUpdateEffect(effect);
+            if (BizConstants.JF_CODE_TOPPING.equals(code)) {
+                postService.updateById(new JobPost().setId(post.getId()).setIfTopping(1));
+            } else {
+                postService.updateById(new JobPost().setId(post.getId()).setIfBold(1));
+            }
+        }
+    }
+
+    private JobPost requireOwnPost(String userId, String dataId) {
+        if (oConvertUtils.isEmpty(dataId)) {
+            throw new RuntimeException("参数错误");
+        }
+        JobPost post = postService.getById(dataId);
+        if (post == null) {
+            throw new RuntimeException("岗位不存在");
+        }
+        if (!userId.equals(post.getUserId())) {
+            throw new RuntimeException("只能对自己的岗位使用道具");
+        }
+        return post;
+    }
 
     @Override
     public IPage<Map<String, Object>> getGoodsOrderList(Page<IntegralGoodsOrder> page, IntegralGoodsOrder params) {
-        return baseMapper.getGoodsOrderList(page,params);
+        return baseMapper.getGoodsOrderList(page, params);
     }
 }
